@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.3 2004/01/03 18:49:44 reed Exp $
+# $NetBSD: Makefile,v 1.4 2004/01/23 21:50:46 jmmv Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 XFCE4_VERSION=	0.0.4
 
 DISTNAME=	xfce4-artwork-${XFCE4_VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	graphics
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	XFce4 artwork
 
-.include "../../x11/xfce4-desktop/buildlink2.mk"
+.include "../../x11/xfce4-desktop/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
