@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.3 2004/01/03 18:49:54 reed Exp $
+# $NetBSD: Makefile,v 1.4 2004/01/23 21:50:49 jmmv Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 XFCE4_VERSION=	0.2
 
 DISTNAME=	xfce4-datetime-plugin-${XFCE4_VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	XFce4 calendar plugin
 
-.include "../../x11/xfce4-panel/buildlink2.mk"
+.include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
